--- a/prj.conf
+++ b/prj.conf
@@ -43,7 +43,7 @@ CONFIG_HEAP_MEM_POOL_SIZE=4096
 # --- Time / POSIX ---
 CONFIG_NEWLIB_LIBC=y
 CONFIG_POSIX_API=y
-
+CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 
 # --- ADC Support ---
