BLE transmission and wake up from sleep

--- a/prj.conf
+++ b/prj.conf
@@ -9,29 +9,28 @@ CONFIG_PRINTK=y
 CONFIG_LOG=y
 CONFIG_LOG_MODE_IMMEDIATE=y
 
-
 # --- BLE Peripheral ---
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="Vitals"
 CONFIG_BT_DEVICE_APPEARANCE=833
-
 CONFIG_BT_GATT_DYNAMIC_DB=y   # Required for dynamic GATT table
 
 CONFIG_BT_CONN_PARAM_UPDATE_TIMEOUT=5000
 CONFIG_BT_MAX_CONN=1
 
-# Stronger buffer configuration for notifications
-CONFIG_BT_CONN_TX_MAX=20
+# Optimized buffer configuration for notifications
+# Lower than defaults to save RAM but remain sufficient for throughput
+CONFIG_BT_CONN_TX_MAX=12
 CONFIG_BT_L2CAP_TX_MTU=247
 CONFIG_BT_BUF_ACL_TX_SIZE=251
-CONFIG_BT_BUF_ACL_TX_COUNT=20
+CONFIG_BT_BUF_ACL_TX_COUNT=10
 CONFIG_BT_BUF_ACL_RX_SIZE=251
-CONFIG_BT_BUF_ACL_RX_COUNT=10
+CONFIG_BT_BUF_ACL_RX_COUNT=6
 
 CONFIG_BT_MAX_PAIRED=1
 
-# --- Optional: Remove unnecessary GATT Client role ---
+# Optional: Remove unnecessary GATT Client role
 CONFIG_BT_GATT_CLIENT=n
 CONFIG_BT_SMP=n
 
@@ -50,7 +49,20 @@ CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_ADC=y
 CONFIG_ADC_NRFX_SAADC=y
 
-# --- Optional ---
-
+# --- Optional debugging helpers ---
 CONFIG_THREAD_NAME=y
 CONFIG_THREAD_MONITOR=y
+
+# --- GPIO & Clock ---
+CONFIG_GPIO=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
+
+# --- RTC / Counter ---
+CONFIG_NRFX_RTC2=y
+CONFIG_COUNTER=y
+#CONFIG_COUNTER_RTC=y
+CONFIG_RTC=y
+CONFIG_RTC_ALARM=y
+
+
+
