LED,GPIO,BUTTON,BATTERY and Charge detection

--- a/prj.conf
+++ b/prj.conf
@@ -312,6 +312,7 @@ CONFIG_ADC_NRFX_SAADC=y
 
 # --- GPIO & Clock ---
 CONFIG_GPIO=y
+CONFIG_GPIO_NRFX=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
 
 # --- RTC / Counter ---
